# rust-commons

./: .gitignore  Cargo.toml  README.md
rdi/: Cargo.toml  README.md
rdi/macros/: Cargo.toml
rdi/macros/src/: inject.rs  injector.rs  lib.rs
rdi/src/: lib.rs
rdi/tests/: single_dyn.rs
