[package]
authors = ["강동윤 <kdy1@dudy.kr>"]
description = "Macros for rdi, simple dependency injection library for rust."
edition = "2018"
keywords = ["dependency", "injection", "macros"]
license = "Apache-2.0"
name = "rdi_macros"
repository = "https://github.com/dudykr/rust-commons.git"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
pmutil = "0.5.3"
proc-macro2 = "1"
quote = "1"
syn = {version = "1", features = ["parsing", "full"]}
